remove some items

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@
     {% endif %}
   </div>
 
-  <section class="author-detail">
+  <!-- <section class="author-detail">
     <section class="post-footer-item author-card">
       <div class="avatar">
         <img src="{{ site.avatar | absolute_url }}" alt="">
@@ -65,8 +65,8 @@
         {% endfor %}
       </ul>
       {% endif %}
-    </section>
-    <section class="post-footer-item read-next">
+    </section> -->
+    <!-- <section class="post-footer-item read-next">
       {% if page.next.url %}
       <div class="read-next-item">
         <a href="{{ page.next.url }}" class="read-next-link"></a>
@@ -95,7 +95,7 @@
       </div>
       {% endif %}
     </section>
-  </section>
+  </section> -->
 
   {% include footer.html %}
 
